--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "com.unityutility.extensions",
+  "name": "com.codestuff.unityutility",
   "version": "1.0.0",
   "displayName": "Unity Utility",
-  "description": "A set of helpful code stuff for Unity\n\nLatest release: 2020.02.07",
+  "description": "A set of helpful code stuff for Unity\n\nLatest release: 2020.02.08",
   "unity": "2018.3",
   "author": {
     "name": "Oleg Pulkin"
