--- a/Code/Editor/UnityUtilityEditor.asmdef
+++ b/Code/Editor/UnityUtilityEditor.asmdef
@@ -12,6 +12,17 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.modules.physics",
+            "expression": "",
+            "define": "INCLUDE_PHYSICS"
+        },
+        {
+            "name": "com.unity.modules.physics2d",
+            "expression": "",
+            "define": "INCLUDE_PHYSICS_2D"
+        }
+    ],
     "noEngineReferences": false
 }
