--- a/Code/Editor/UnityUtilityEditor.asmdef
+++ b/Code/Editor/UnityUtilityEditor.asmdef
@@ -22,6 +22,11 @@
             "name": "com.unity.modules.physics2d",
             "expression": "",
             "define": "INCLUDE_PHYSICS_2D"
+        },
+        {
+            "name": "com.unity.modules.audio",
+            "expression": "",
+            "define": "INCLUDE_AUDIO"
         }
     ],
     "noEngineReferences": false
