--- a/Code/Runtime/UnityUtility.asmdef
+++ b/Code/Runtime/UnityUtility.asmdef
@@ -18,6 +18,11 @@
             "name": "com.unity.modules.physics2d",
             "expression": "",
             "define": "INCLUDE_PHYSICS_2D"
+        },
+        {
+            "name": "com.unity.modules.audio",
+            "expression": "",
+            "define": "INCLUDE_AUDIO"
         }
     ],
     "noEngineReferences": false
