--- a/Code/Runtime/UnityUtility.asmdef
+++ b/Code/Runtime/UnityUtility.asmdef
@@ -26,7 +26,7 @@
         },
         {
             "name": "com.unity.ugui",
-            "expression": "2019.3",
+            "expression": "",
             "define": "INCLUDE_UNITY_UI"
         }
     ],
