--- a/Code/Runtime/UnityUtility.asmdef
+++ b/Code/Runtime/UnityUtility.asmdef
@@ -7,7 +7,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_2018_1_OR_NEWER"
+    ],
     "versionDefines": [
         {
             "name": "com.unity.modules.physics",
