--- a/Code/Runtime/UnityUtility.asmdef
+++ b/Code/Runtime/UnityUtility.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "UnityUtility",
     "references": [
-        "Unity.Addressables"
+        "Unity.Addressables",
+        "Unity.Postprocessing.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -37,6 +38,11 @@
             "name": "com.unity.addressables",
             "expression": "",
             "define": "INCLUDE_ADDRESSABLES"
+        },
+        {
+            "name": "com.unity.postprocessing",
+            "expression": "",
+            "define": "INCLUDE_POST_PROCESSING"
         }
     ],
     "noEngineReferences": false
