--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 ﻿{
-    "name": "com.oleghcp.tools",
-    "displayName": "OlegHcpTools",
+    "name": "com.oleghcp.unitytools",
+    "displayName": "OlegHcp Unity Tools",
     "author": {
         "name": "Oleg Pulkin",
         "email": "oleghcp@gmail.com"
@@ -8,7 +8,7 @@
     "version": "2.0.0",
     "unity": "2019.4",
     "description": "A set of helpful code stuff for Unity.",
-    "keywords": [ "Oleg", "hcp", "tools" ],
+    "keywords": [ "oleg", "hcp", "tools" ],
     "license": "MIT",
     "dependencies": {},
     "samples": []
