upd package.json

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
         "name": "Oleg Pulkin",
         "email": "oleghcp@gmail.com"
     },
-    "version": "2.0.0",
+    "version": "2.1.0",
     "unity": "2019.4",
     "description": "A set of helpful code stuff for Unity.",
-    "keywords": [ "oleg", "hcp", "tools" ],
+    "keywords": [ "oleghcp", "oleg", "hcp", "unitytools", "tools" ],
     "license": "MIT",
     "dependencies": {},
     "samples": []
