PathNode default constructor

--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "license": "MIT",
     "dependencies": {},
     "author": {
-        "name": "Oleg Pulkin",
-        "email": "oleghcp@gmail.com",
-        "url": "https://github.com/oleghcp"
+        "name": "Oleg Pulkin"
     }
 }
