refactoring; UNITY definition

--- a/Code/Runtime/OlegHcp.asmdef
+++ b/Code/Runtime/OlegHcp.asmdef
@@ -16,6 +16,11 @@
     ],
     "versionDefines": [
         {
+            "name": "Unity",
+            "expression": "",
+            "define": "UNITY"
+        },
+        {
             "name": "com.unity.modules.physics",
             "expression": "",
             "define": "INCLUDE_PHYSICS"
